// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal should match snapshot 1`] = `
<scale-modal>
  <mock:shadow-root>
    <style>
      .modal-0-0-11 {
  top: 0;
  left: 0;
  width: calc(100% - 62.5%);
  height: calc(100% - 160px);
  margin: 80px 31.25%;
  display: none;
  z-index: 100;
  position: fixed;
  align-items: center;
}
.modal--opened-0-0-12 {
  display: flex;
}
.modal__scroll-container-0-0-13 {
  overflow: auto;
}
.modal__content-0-0-14 {
  color: #333;
  width: 100%;
  display: flex;
  z-index: 100;
  background: #FFFFFF;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
  max-height: 100%;
  border-radius: 3px;
  flex-direction: column;
  justify-content: space-between;
}
.modal__header-0-0-15 {
  color: #262626;
  margin: 0 1rem;
  display: flex;
  padding: 1rem 0;
  font-size: 1.25rem;
  line-height: 16px;
  justify-content: space-between;
}
.modal__header-0-0-15 ::slotted(*) {
  color: #262626;
  margin: 0;
  font-size: 1rem;
  font-weight: bold;
}
.modal__header-scroll-0-0-16 {
  border-bottom: 1px solid #CCC;
}
.modal__body-0-0-17 {
  padding: 1rem;
  line-height: 1;
}
.modal__close-0-0-18 {
  cursor: pointer;
}
.modal__actions-0-0-19 {
  display: flex;
  padding: 1rem;
  background: #FFF;
  border-radius: 3px;
  justify-content: flex-end;
}
.modal__backdrop-0-0-20 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  position: fixed;
  background: rgba(0, 0, 0, 0.75);
}
.transitions-0-0-21 {}
    </style>
    <animatable-component>
      <div class="modal-0-0-11">
        <div class="modal__backdrop-0-0-20"></div>
        <div class="modal__content-0-0-14">
          <div class="modal__scroll-container-0-0-13">
            <div class="modal__body-0-0-17">
              <slot></slot>
            </div>
          </div>
          <div class="modal__actions-0-0-19">
            <slot name="modal-actions"></slot>
          </div>
        </div>
      </div>
    </animatable-component>
  </mock:shadow-root>
  Label
</scale-modal>
`;

exports[`Modal should match snapshot when opened 1`] = `
<scale-modal opened="true">
  <mock:shadow-root>
    <style>
      .modal-0-0-11 {
  top: 0;
  left: 0;
  width: calc(100% - 62.5%);
  height: calc(100% - 160px);
  margin: 80px 31.25%;
  display: none;
  z-index: 100;
  position: fixed;
  align-items: center;
}
.modal--opened-0-0-12 {
  display: flex;
}
.modal__scroll-container-0-0-13 {
  overflow: auto;
}
.modal__content-0-0-14 {
  color: #333;
  width: 100%;
  display: flex;
  z-index: 100;
  background: #FFFFFF;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
  max-height: 100%;
  border-radius: 3px;
  flex-direction: column;
  justify-content: space-between;
}
.modal__header-0-0-15 {
  color: #262626;
  margin: 0 1rem;
  display: flex;
  padding: 1rem 0;
  font-size: 1.25rem;
  line-height: 16px;
  justify-content: space-between;
}
.modal__header-0-0-15 ::slotted(*) {
  color: #262626;
  margin: 0;
  font-size: 1rem;
  font-weight: bold;
}
.modal__header-scroll-0-0-16 {
  border-bottom: 1px solid #CCC;
}
.modal__body-0-0-17 {
  padding: 1rem;
  line-height: 1;
}
.modal__close-0-0-18 {
  cursor: pointer;
}
.modal__actions-0-0-19 {
  display: flex;
  padding: 1rem;
  background: #FFF;
  border-radius: 3px;
  justify-content: flex-end;
}
.modal__backdrop-0-0-20 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  position: fixed;
  background: rgba(0, 0, 0, 0.75);
}
.transitions-0-0-21 {}
    </style>
    <animatable-component>
      <div class="modal-0-0-11">
        <div class="modal__backdrop-0-0-20"></div>
        <div class="modal__content-0-0-14">
          <div class="modal__scroll-container-0-0-13">
            <div class="modal__body-0-0-17">
              <slot></slot>
            </div>
          </div>
          <div class="modal__actions-0-0-19">
            <slot name="modal-actions"></slot>
          </div>
        </div>
      </div>
    </animatable-component>
  </mock:shadow-root>
  Label
</scale-modal>
`;

exports[`Modal should match snapshot with actions slot 1`] = `
<scale-modal>
  <mock:shadow-root>
    <style>
      .modal-0-0-53 {
  top: 0;
  left: 0;
  width: calc(100% - 62.5%);
  height: calc(100% - 160px);
  margin: 80px 31.25%;
  display: none;
  z-index: 100;
  position: fixed;
  align-items: center;
}
.modal--opened-0-0-54 {
  display: flex;
}
.modal__scroll-container-0-0-55 {
  overflow: auto;
}
.modal__content-0-0-56 {
  color: #333;
  width: 100%;
  display: flex;
  z-index: 100;
  background: #FFFFFF;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
  max-height: 100%;
  border-radius: 3px;
  flex-direction: column;
  justify-content: space-between;
}
.modal__header-0-0-57 {
  color: #262626;
  margin: 0 1rem;
  display: flex;
  padding: 1rem 0;
  font-size: 1.25rem;
  line-height: 16px;
  justify-content: space-between;
}
.modal__header-0-0-57 ::slotted(*) {
  color: #262626;
  margin: 0;
  font-size: 1rem;
  font-weight: bold;
}
.modal__header-scroll-0-0-58 {
  border-bottom: 1px solid #CCC;
}
.modal__body-0-0-59 {
  padding: 1rem;
  line-height: 1;
}
.modal__close-0-0-60 {
  cursor: pointer;
}
.modal__actions-0-0-61 {
  display: flex;
  padding: 1rem;
  background: #FFF;
  border-radius: 3px;
  justify-content: flex-end;
}
.modal__backdrop-0-0-62 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  position: fixed;
  background: rgba(0, 0, 0, 0.75);
}
.transitions-0-0-63 {}
    </style>
    <animatable-component>
      <div class="modal-0-0-53">
        <div class="modal__backdrop-0-0-62"></div>
        <div class="modal__content-0-0-56">
          <div class="modal__scroll-container-0-0-55">
            <div class="modal__body-0-0-59">
              <slot></slot>
            </div>
          </div>
          <div class="modal__actions-0-0-61">
            <slot name="modal-actions"></slot>
          </div>
        </div>
      </div>
    </animatable-component>
  </mock:shadow-root>
  <span slot="modal-actions">
    Action buttons
  </span>
  Content
</scale-modal>
`;

exports[`Modal should match snapshot with close slot 1`] = `
<scale-modal>
  <mock:shadow-root>
    <style>
      .modal-0-0-74 {
  top: 0;
  left: 0;
  width: calc(100% - 62.5%);
  height: calc(100% - 160px);
  margin: 80px 31.25%;
  display: none;
  z-index: 100;
  position: fixed;
  align-items: center;
}
.modal--opened-0-0-75 {
  display: flex;
}
.modal__scroll-container-0-0-76 {
  overflow: auto;
}
.modal__content-0-0-77 {
  color: #333;
  width: 100%;
  display: flex;
  z-index: 100;
  background: #FFFFFF;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
  max-height: 100%;
  border-radius: 3px;
  flex-direction: column;
  justify-content: space-between;
}
.modal__header-0-0-78 {
  color: #262626;
  margin: 0 1rem;
  display: flex;
  padding: 1rem 0;
  font-size: 1.25rem;
  line-height: 16px;
  justify-content: space-between;
}
.modal__header-0-0-78 ::slotted(*) {
  color: #262626;
  margin: 0;
  font-size: 1rem;
  font-weight: bold;
}
.modal__header-scroll-0-0-79 {
  border-bottom: 1px solid #CCC;
}
.modal__body-0-0-80 {
  padding: 1rem;
  line-height: 1;
}
.modal__close-0-0-81 {
  cursor: pointer;
}
.modal__actions-0-0-82 {
  display: flex;
  padding: 1rem;
  background: #FFF;
  border-radius: 3px;
  justify-content: flex-end;
}
.modal__backdrop-0-0-83 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  position: fixed;
  background: rgba(0, 0, 0, 0.75);
}
.transitions-0-0-84 {}
    </style>
    <animatable-component>
      <div class="modal-0-0-74">
        <div class="modal__backdrop-0-0-83"></div>
        <div class="modal__content-0-0-77">
          <div class="modal__scroll-container-0-0-76">
            <div class="modal__body-0-0-80">
              <slot></slot>
            </div>
          </div>
          <div class="modal__actions-0-0-82">
            <slot name="modal-actions"></slot>
          </div>
        </div>
      </div>
    </animatable-component>
  </mock:shadow-root>
  <span slot="close">
    Close
  </span>
  Content
</scale-modal>
`;

exports[`Modal should match snapshot with header slot 1`] = `
<scale-modal>
  <mock:shadow-root>
    <style>
      .modal-0-0-32 {
  top: 0;
  left: 0;
  width: calc(100% - 62.5%);
  height: calc(100% - 160px);
  margin: 80px 31.25%;
  display: none;
  z-index: 100;
  position: fixed;
  align-items: center;
}
.modal--opened-0-0-33 {
  display: flex;
}
.modal__scroll-container-0-0-34 {
  overflow: auto;
}
.modal__content-0-0-35 {
  color: #333;
  width: 100%;
  display: flex;
  z-index: 100;
  background: #FFFFFF;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
  max-height: 100%;
  border-radius: 3px;
  flex-direction: column;
  justify-content: space-between;
}
.modal__header-0-0-36 {
  color: #262626;
  margin: 0 1rem;
  display: flex;
  padding: 1rem 0;
  font-size: 1.25rem;
  line-height: 16px;
  justify-content: space-between;
}
.modal__header-0-0-36 ::slotted(*) {
  color: #262626;
  margin: 0;
  font-size: 1rem;
  font-weight: bold;
}
.modal__header-scroll-0-0-37 {
  border-bottom: 1px solid #CCC;
}
.modal__body-0-0-38 {
  padding: 1rem;
  line-height: 1;
}
.modal__close-0-0-39 {
  cursor: pointer;
}
.modal__actions-0-0-40 {
  display: flex;
  padding: 1rem;
  background: #FFF;
  border-radius: 3px;
  justify-content: flex-end;
}
.modal__backdrop-0-0-41 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  position: fixed;
  background: rgba(0, 0, 0, 0.75);
}
.transitions-0-0-42 {}
    </style>
    <animatable-component>
      <div class="modal-0-0-32">
        <div class="modal__backdrop-0-0-41"></div>
        <div class="modal__content-0-0-35">
          <div class="modal__header-0-0-36">
            <slot name="header"></slot>
            <a class="modal__close-0-0-39">
              x
            </a>
          </div>
          <div class="modal__scroll-container-0-0-34">
            <div class="modal__body-0-0-38">
              <slot></slot>
            </div>
          </div>
          <div class="modal__actions-0-0-40">
            <slot name="modal-actions"></slot>
          </div>
        </div>
      </div>
    </animatable-component>
  </mock:shadow-root>
  <span slot="header">
    Header content
  </span>
  A title
</scale-modal>
`;
